@@ -1,0 +1,3 @@
+An evolution of 'reshape2'. It's designed specifically for data
+tidying (not general reshaping or aggregating) and works well with
+'dplyr' data pipelines.
